--- a/Site/templates/empresa.html
+++ b/Site/templates/empresa.html
@@ -14,7 +14,7 @@
         <!-- Section-->
         <section class="py-5">
             <div class = "container">
-            {% lorem 5 p random %}
+                O Senac S.A. (Shopping) é uma das maiores empresas full service no setor de shopping centers do Brasil. Suas atividades englobam a concepção, o planejamento, o desenvolvimento e a administração de shopping centers regionais, outlets e complexos imobiliários de uso misto com torres comerciais. O Senac Shopping detém participação em 14 shopping centers, 2 Premium Outlets e 3 torres comerciais que juntos totalizam 707 mil m² de ABL total, sendo a sua ABL própria correspondente a 450 mil m². A Companhia participa da administração de todos os seus shoppings centers, de seus premium outlets e das suas torres comerciais.
             </div>
         </section>
 {% endblock Conteudo %}
