--- a/Site/templates/index.html
+++ b/Site/templates/index.html
@@ -21,13 +21,10 @@
                     
                     
                     <!-- Inicio Produtos -->
-                    {% include 'card_produto.html' %}
-                    <!-------->
-                    {% include 'card_produto.html' %}
-                    <!-------->
-                    {% include 'card_produto.html' %}
-                    <!-------->
-                    {% include 'card_produto.html' %}
+                    {% for prod in produtos%}
+                        {% include 'card_produto.html' %}
+                    {% endfor %}
+                    
                     <!-- termino produtos-->
                 </div>
             </div>
