--- a/Site/templates/cadastro.html
+++ b/Site/templates/cadastro.html
@@ -14,7 +14,14 @@
         <!-- Section-->
         <section class="py-5">
             <div class = "container">
-            {% lorem 2 p random %}
+                <form action="{% url 'cadastro' %}" method = "POST">
+                    {% csrf_token %}
+                    <table class="table">
+                    {{ form_cliente.as_table }}
+                    </table>
+
+                    <input type="submit" value="Enviar">
+                </form>
             </div>
         </section>
 {% endblock Conteudo %}
